<resources>
    <string name="app_name">Raise to Wake</string>

    <string name="header_title">Raise to Wake</string>
    <string name="header_subtitle">Lift your phone to turn on the screen</string>

    <string name="service_label">Background Service</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>

    <string name="sensitivity_label">Lift Sensitivity</string>
    <string name="sensitivity_value">Sensitivity: %.1f</string>
    <string name="sensitivity_hint">Higher values trigger more easily (may cause pocket triggers)</string>

    <string name="permissions_label">Permissions</string>
    <string name="notification_permission_label">Notifications</string>
    <string name="battery_permission_label">Battery optimization exemption</string>
    <string name="status_granted">Granted</string>
    <string name="status_not_granted">Not granted</string>
    <string name="grant_action">Grant</string>

    <string name="notification_channel_name">Raise to Wake Service</string>
    <string name="notification_channel_description">Monitors motion to turn on the screen when the phone is lifted.</string>
    <string name="notification_title">Raise to Wake Active</string>
    <string name="notification_text">Monitoring movement to wake display</string>
</resources>
